--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,4 @@ Assets/Real Stars Skybox/StarSkybox04/StarSkybox045.png
 Assets/Real Stars Skybox/StarSkybox04/StarSkybox045.png.meta
 Assets/Real Stars Skybox/StarSkybox04/StarSkybox046.png
 Assets/Real Stars Skybox/StarSkybox04/StarSkybox046.png.meta
+*.meta
